# pipeio

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.datalad/: config
.projio/: config.yml  packages.yml  projio.mk  save_helper.py
docs/: index.md
docs/explanation/: ecosystem-links.md  hierarchy.md  index.md  path-resolution.md  registry-model.md
docs/how-to/: flows.md  index.md  init.md  paths.md  registry.md
docs/log/: agent-activity.md
docs/log/idea/: idea-arash-20260329-162709-896476.md  index.md
docs/log/issue/: index.md  issue-arash-20260421-210505-291234.md  issue-arash-20260423-163526-145325.md
docs/log/task/: index.md  task-arash-20260423-163539-959588.md
docs/prompts/: implement.md
docs/reference/: cli.md  configuration.md  index.md  workspace.md
docs/specs/pipeio/: cli.md  flow-config.md  index.md  mcp-tools.md  overview.md  pipeline-docs.md
docs/tutorials/: authoring-workflow.md  end-to-end.md  existing-project.md  index.md  quickstart.md
src/pipeio/: __init__.py  cli.py  config.py  contracts.py  docs.py  matlab.py  mcp.py  registry.py  resolver.py  smk_log.py
src/pipeio/adapters/: __init__.py  bids.py
src/pipeio/notebook/: __init__.py  analyze.py  backend.py  backend_marimo.py  (+3 more)
tests/: test_bids_resolver.py  test_cli.py  test_config.py  test_contracts.py  test_docs.py  test_matlab.py  test_mcp.py  test_mod_discovery.py  test_nb.py  test_nb_analyze.py  test_nb_marimo.py  test_pipeio.py  test_registry.py  test_resolver.py  test_smk_log.py
(+1 files in other folders)
